k8s/joplin/deployment.yml
---
# Source: joplin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joplin
  labels:
    helm.sh/chart: joplin-0.1.1
    app.kubernetes.io/name: joplin
    app.kubernetes.io/instance: joplin
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 22300
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: joplin
    app.kubernetes.io/instance: joplin
---
# Source: joplin/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin
  labels:
    helm.sh/chart: joplin-0.1.1
    app.kubernetes.io/name: joplin
    app.kubernetes.io/instance: joplin
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: joplin
      app.kubernetes.io/instance: joplin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: joplin
        app.kubernetes.io/instance: joplin
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: joplin
          securityContext:
            {}
          image: "joplin/server:1.7.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 22300
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: joplin/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: joplin
  labels:
    helm.sh/chart: joplin-0.1.1
    app.kubernetes.io/name: joplin
    app.kubernetes.io/instance: joplin
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - "*.chaldea.cn"
      secretName: wildcard-chaldea-cn-tls
  rules:
    - host: "note.chaldea.cn"
      http:
        paths:
          - path: /
            backend:
              serviceName: joplin
              servicePort: 22300
